[DB] Add delete DB

--- a/DB/SQLite/sqlite-basics.ipynb
+++ b/DB/SQLite/sqlite-basics.ipynb
@@ -26,8 +26,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.189433Z",
-     "start_time": "2020-05-04T14:48:19.205238Z"
+     "end_time": "2020-05-04T15:14:43.393893Z",
+     "start_time": "2020-05-04T15:14:42.722882Z"
     }
    },
    "outputs": [],
@@ -39,7 +39,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create & Link Database"
+    "## Create Database\n",
+    "\n",
+    "The concept of creating or dropping a database is not meant for an embedded database engine like SQLite.\n",
+    "\n",
+    "If you want to create DB in SQLite, just from the command line: `sqlite3 databasefilename`.\n",
+    "\n",
+    "For example: `sqlite3 test.db`\n",
+    "\n",
+    "### Create DB in Jupyter\n",
+    "\n",
+    "Because `ipython-sql` is based on `SQLAlchemy`, we can create and connect DB as follow:"
    ]
   },
   {
@@ -47,13 +57,40 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.217499Z",
-     "start_time": "2020-05-04T14:48:20.191624Z"
+     "end_time": "2020-05-04T15:14:43.416324Z",
+     "start_time": "2020-05-04T15:14:43.396643Z"
     }
    },
    "outputs": [],
    "source": [
     "%sql sqlite:///test.db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-04T15:14:43.580121Z",
+     "start_time": "2020-05-04T15:14:43.427510Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 32\r\n",
+      "drwxr-xr-x  5 kakalin  staff    160 May  4 23:14 \u001b[1m\u001b[36m.\u001b[m\u001b[m\r\n",
+      "drwxr-xr-x  9 kakalin  staff    288 May  4 23:03 \u001b[1m\u001b[36m..\u001b[m\u001b[m\r\n",
+      "drwxr-xr-x  3 kakalin  staff     96 May  4 23:01 \u001b[1m\u001b[36m.ipynb_checkpoints\u001b[m\u001b[m\r\n",
+      "-rw-r--r--@ 1 kakalin  staff  15118 May  4 23:13 sqlite-basics.ipynb\r\n",
+      "-rw-r--r--  1 kakalin  staff      0 May  4 23:14 test.db\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -al"
    ]
   },
   {
@@ -67,7 +104,7 @@
     "- U: Update\n",
     "- D: Delete\n",
     "\n",
-    "![](./images/crud.png)\n"
+    "![](https://raw.githubusercontent.com/kaka-lin/Notes/master/DB/images/crud.png)"
    ]
   },
   {
@@ -79,11 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.258720Z",
-     "start_time": "2020-05-04T14:48:20.225761Z"
+     "end_time": "2020-05-04T15:14:43.628273Z",
+     "start_time": "2020-05-04T15:14:43.592670Z"
     }
    },
    "outputs": [
@@ -101,7 +138,7 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,11 +165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.305630Z",
-     "start_time": "2020-05-04T14:48:20.266889Z"
+     "end_time": "2020-05-04T15:14:43.758539Z",
+     "start_time": "2020-05-04T15:14:43.634725Z"
     }
    },
    "outputs": [
@@ -151,7 +188,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,11 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.385842Z",
-     "start_time": "2020-05-04T14:48:20.333368Z"
+     "end_time": "2020-05-04T15:14:43.811861Z",
+     "start_time": "2020-05-04T15:14:43.762112Z"
     },
     "scrolled": true
    },
@@ -228,7 +265,7 @@
        " (2, 'kiwi', 'Li', 30, 173, 70, 'Taipei')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,29 +278,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.430156Z",
-     "start_time": "2020-05-04T14:48:20.391803Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-415388e11715>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-415388e11715>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    SELECT 可以加減乘除 AS 命名\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "SELECT 可以加減乘除 AS 命名"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -272,14 +286,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.446145Z",
-     "start_time": "2020-05-04T14:48:19.387Z"
+     "end_time": "2020-05-04T15:14:43.830353Z",
+     "start_time": "2020-05-04T15:14:43.818186Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///test.db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -291,14 +324,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.447849Z",
-     "start_time": "2020-05-04T14:48:19.393Z"
+     "end_time": "2020-05-04T15:14:43.846784Z",
+     "start_time": "2020-05-04T15:14:43.835455Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///test.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>persion_id</th>\n",
+       "        <th>firstname</th>\n",
+       "        <th>lastname</th>\n",
+       "        <th>age</th>\n",
+       "        <th>height</th>\n",
+       "        <th>weight</th>\n",
+       "        <th>city</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>kaka</td>\n",
+       "        <td>Lin</td>\n",
+       "        <td>28</td>\n",
+       "        <td>175</td>\n",
+       "        <td>68</td>\n",
+       "        <td>Taipei</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>kiwi</td>\n",
+       "        <td>Li</td>\n",
+       "        <td>30</td>\n",
+       "        <td>173</td>\n",
+       "        <td>70</td>\n",
+       "        <td>Taipei</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'kaka', 'Lin', 28, 175, 68, 'Taipei'),\n",
+       " (2, 'kiwi', 'Li', 30, 173, 70, 'Taipei')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -318,14 +402,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.457723Z",
-     "start_time": "2020-05-04T14:48:19.422Z"
+     "end_time": "2020-05-04T15:14:43.938470Z",
+     "start_time": "2020-05-04T15:14:43.880877Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///test.db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -335,14 +438,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.460148Z",
-     "start_time": "2020-05-04T14:48:19.428Z"
+     "end_time": "2020-05-04T15:14:43.976565Z",
+     "start_time": "2020-05-04T15:14:43.948027Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///test.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>persion_id</th>\n",
+       "        <th>firstname</th>\n",
+       "        <th>lastname</th>\n",
+       "        <th>age</th>\n",
+       "        <th>height</th>\n",
+       "        <th>weight</th>\n",
+       "        <th>city</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>kaka</td>\n",
+       "        <td>Lin</td>\n",
+       "        <td>28</td>\n",
+       "        <td>175</td>\n",
+       "        <td>68</td>\n",
+       "        <td>Taipei</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>kiwi</td>\n",
+       "        <td>Li</td>\n",
+       "        <td>30</td>\n",
+       "        <td>173</td>\n",
+       "        <td>70</td>\n",
+       "        <td>Taipei</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>albert</td>\n",
+       "        <td>Lin</td>\n",
+       "        <td>28</td>\n",
+       "        <td>180</td>\n",
+       "        <td>70</td>\n",
+       "        <td>Taipei</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'kaka', 'Lin', 28, 175, 68, 'Taipei'),\n",
+       " (2, 'kiwi', 'Li', 30, 173, 70, 'Taipei'),\n",
+       " (3, 'albert', 'Lin', 28, 180, 70, 'Taipei')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -352,14 +516,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.462082Z",
-     "start_time": "2020-05-04T14:48:19.433Z"
+     "end_time": "2020-05-04T15:14:44.033318Z",
+     "start_time": "2020-05-04T15:14:43.999285Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///test.db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -369,14 +552,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T14:48:20.479298Z",
-     "start_time": "2020-05-04T14:48:19.439Z"
+     "end_time": "2020-05-04T15:14:44.096423Z",
+     "start_time": "2020-05-04T15:14:44.047676Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///test.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>persion_id</th>\n",
+       "        <th>firstname</th>\n",
+       "        <th>lastname</th>\n",
+       "        <th>age</th>\n",
+       "        <th>height</th>\n",
+       "        <th>weight</th>\n",
+       "        <th>city</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>kaka</td>\n",
+       "        <td>Lin</td>\n",
+       "        <td>28</td>\n",
+       "        <td>175</td>\n",
+       "        <td>68</td>\n",
+       "        <td>Taipei</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>kiwi</td>\n",
+       "        <td>Li</td>\n",
+       "        <td>30</td>\n",
+       "        <td>173</td>\n",
+       "        <td>70</td>\n",
+       "        <td>Taipei</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'kaka', 'Lin', 28, 175, 68, 'Taipei'),\n",
+       " (2, 'kiwi', 'Li', 30, 173, 70, 'Taipei')]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -385,11 +619,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Drop Database\n",
+    "\n",
+    "If we want to drop DB in SQLite,just delete the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-04T15:14:44.415736Z",
+     "start_time": "2020-05-04T15:14:44.106255Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 32\r\n",
+      "drwxr-xr-x  4 kakalin  staff    128 May  4 23:14 \u001b[1m\u001b[36m.\u001b[m\u001b[m\r\n",
+      "drwxr-xr-x  9 kakalin  staff    288 May  4 23:03 \u001b[1m\u001b[36m..\u001b[m\u001b[m\r\n",
+      "drwxr-xr-x  3 kakalin  staff     96 May  4 23:01 \u001b[1m\u001b[36m.ipynb_checkpoints\u001b[m\u001b[m\r\n",
+      "-rw-r--r--@ 1 kakalin  staff  15118 May  4 23:13 sqlite-basics.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!rm -rf test.db\n",
+    "!ls -al"
+   ]
   }
  ],
  "metadata": {
@@ -441,7 +704,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "165px"
+    "width": "229px"
    },
    "toc_section_display": true,
    "toc_window_display": true
