--- a/DB/SQLite/sqlite-basics.ipynb
+++ b/DB/SQLite/sqlite-basics.ipynb
@@ -82,13 +82,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 120\r\n",
-      "drwxr-xr-x   6 kakalin  staff    192 May  7 15:29 \u001b[1m\u001b[36m.\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x  11 kakalin  staff    352 May  6 15:51 \u001b[1m\u001b[36m..\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x   3 kakalin  staff     96 May  5 15:53 \u001b[1m\u001b[36m.ipynb_checkpoints\u001b[m\u001b[m\r\n",
-      "-rw-r--r--   1 kakalin  staff    422 May  7 10:52 README.md\r\n",
-      "-rw-r--r--@  1 kakalin  staff  54433 May  7 15:29 sqlite-basics.ipynb\r\n",
-      "-rw-r--r--   1 kakalin  staff      0 May  7 15:29 test.db\r\n"
+      "total 32\r\n",
+      "drwxr-xr-x 3 kaka kaka  4096  5月 14 10:16 .\r\n",
+      "drwxr-xr-x 7 kaka kaka  4096  5月 14 09:49 ..\r\n",
+      "drwxr-xr-x 2 kaka kaka  4096  5月 14 09:52 .ipynb_checkpoints\r\n",
+      "-rw-r--r-- 1 kaka kaka   422  5月 14 09:25 README.md\r\n",
+      "-rw-r--r-- 1 kaka kaka 15267  5月 14 10:16 sqlite-basics.ipynb\r\n",
+      "-rw-r--r-- 1 kaka kaka     0  5月 14 10:16 test.db\r\n"
      ]
     }
    ],
@@ -187,14 +187,15 @@
    ],
    "source": [
     "%%sql\n",
-    "CREATE TABLE persions(\n",
-    "    persion_id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "\n",
+    "CREATE TABLE persons(\n",
+    "    person_id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
     "    firstname VARCHAR(255),\n",
-    "    lastname VARCHAR(255),\n",
-    "    age INTEGER,\n",
-    "    height REAL,\n",
-    "    weight REAL,\n",
-    "    city VARCHAR(255)\n",
+    "    lastname  VARCHAR(255),\n",
+    "    age       INTEGER,\n",
+    "    height    REAL,\n",
+    "    weight    REAL,\n",
+    "    city      VARCHAR(255)\n",
     ");"
    ]
   },
@@ -251,10 +252,11 @@
    ],
    "source": [
     "%%sql\n",
-    "INSERT INTO persions\n",
-    "    VALUES(10, 'kaka','Lin', 28, 175, 70, 'Taipei');\n",
-    "INSERT INTO persions (firstname, lastname, age, height, weight, city) \n",
-    "    VALUES('kiwi','Li', 30, 173, 70, 'Taipei');"
+    "INSERT INTO persons\n",
+    "VALUES (10, 'kaka','Lin', 28, 175, 70, 'Taipei');\n",
+    "\n",
+    "INSERT INTO persons (firstname, lastname, age, height, weight, city) \n",
+    "VALUES ('kiwi','Li', 30, 173, 70, 'Taipei');"
    ]
   },
   {
@@ -288,7 +290,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -329,8 +331,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT * \n",
-    "    FROM persions; "
+    "SELECT * FROM persons; "
    ]
   },
   {
@@ -355,7 +356,8 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///test.db\n",
-      "1 rows affected.\n"
+      "1 rows affected.\n",
+      "0 rows affected.\n"
      ]
     },
     {
@@ -372,10 +374,10 @@
    "source": [
     "%%sql\n",
     "\n",
-    "UPDATE persions\n",
-    "    SET weight = 68\n",
-    "    -- or WHERE persion_id = 1\n",
-    "    WHERE firstname = 'kaka';"
+    "UPDATE persons\n",
+    "SET    weight = 68\n",
+    "WHERE  firstname = 'kaka';\n",
+    "-- or WHERE person_id = 1;"
    ]
   },
   {
@@ -401,7 +403,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -442,8 +444,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT * \n",
-    "    FROM persions;"
+    "SELECT * FROM persons;"
    ]
   },
   {
@@ -488,8 +489,8 @@
    "source": [
     "%%sql\n",
     "\n",
-    "INSERT INTO persions \n",
-    "    VALUES(3, 'albert','Lin', 28, 180, 70, 'Taipei');"
+    "INSERT INTO persons \n",
+    "VALUES (3, 'albert','Lin', 28, 180, 70, 'Taipei');"
    ]
   },
   {
@@ -515,7 +516,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -566,8 +567,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT * \n",
-    "    FROM persions;"
+    "SELECT * FROM persons;"
    ]
   },
   {
@@ -602,8 +602,8 @@
    "source": [
     "%%sql\n",
     "\n",
-    "DELETE FROM persions\n",
-    "    WHERE persion_id = 3;"
+    "DELETE FROM persons\n",
+    "WHERE person_id = 3;"
    ]
   },
   {
@@ -629,7 +629,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -670,8 +670,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT * \n",
-    "    FROM persions;"
+    "SELECT * FROM persons;"
    ]
   },
   {
@@ -696,13 +695,7 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///test.db\n",
-      "1 rows affected.\n",
-      "1 rows affected.\n",
-      "1 rows affected.\n",
-      "1 rows affected.\n",
-      "1 rows affected.\n",
-      "1 rows affected.\n",
-      "1 rows affected.\n"
+      "7 rows affected.\n"
      ]
     },
     {
@@ -719,20 +712,14 @@
    "source": [
     "%%sql\n",
     "\n",
-    "INSERT INTO persions (firstname, lastname, age, height, weight, city) \n",
-    "    VALUES('Albert','Lin', 28, 160, 70, 'Taipei');\n",
-    "INSERT INTO persions (firstname, lastname, age, height, weight, city) \n",
-    "    VALUES('Andy','Wei', 24, 175, 72, 'Teipei');\n",
-    "INSERT INTO persions (firstname, lastname, age, height, weight, city) \n",
-    "    VALUES('kevin','Wang', 30, 174, 63, 'San Francisco');\n",
-    "INSERT INTO persions (firstname, lastname, age, height, weight, city) \n",
-    "    VALUES('kevin','Wei', 27, 178, 65, 'Taipei');\n",
-    "INSERT INTO persions (firstname, lastname, age, height, weight, city) \n",
-    "    VALUES('David','Kang', 26, 175, 65, 'Washington');\n",
-    "INSERT INTO persions (firstname, lastname, age, height, weight, city) \n",
-    "    VALUES('Matt','Wang', 26, 172, 72, 'Taipei');\n",
-    "INSERT INTO persions (firstname, lastname, age, height, weight, city) \n",
-    "    VALUES('kaka-ideal','Lin', 28, 178, 70, 'Janpan');"
+    "INSERT INTO persons (firstname, lastname, age, height, weight, city) \n",
+    "VALUES ('Albert', 'Lin', 28, 160, 70, 'Taipei'),\n",
+    "       ('Andy', 'Wei', 24, 175, 72, 'Teipei'),\n",
+    "       ('kevin', 'Wang', 30, 174, 63, 'San Francisco'),\n",
+    "       ('kevin', 'Wei', 27, 178, 65, 'Taipei'),\n",
+    "       ('David', 'Kang', 26, 175, 65, 'Washington'),\n",
+    "       ('Matt', 'Wang', 26, 172, 72, 'Taipei'),\n",
+    "       ('kaka-ideal', 'Lin', 28, 178, 70, 'Janpan');"
    ]
   },
   {
@@ -758,7 +745,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -869,8 +856,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT *\n",
-    "    FROM persions"
+    "SELECT * FROM persons"
    ]
   },
   {
@@ -897,7 +883,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -949,8 +935,8 @@
     "%%sql\n",
     "\n",
     "SELECT *\n",
-    "    FROM persions\n",
-    "    WHERE age = 28;"
+    "FROM   persons\n",
+    "WHERE  age = 28;"
    ]
   },
   {
@@ -990,7 +976,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -1032,9 +1018,9 @@
     "%%sql\n",
     "\n",
     "SELECT *\n",
-    "    FROM persions\n",
-    "    WHERE age = 28 AND \n",
-    "          height > 170;"
+    "FROM   persons\n",
+    "WHERE  age = 28\n",
+    "AND    height > 170;"
    ]
   },
   {
@@ -1067,7 +1053,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -1179,9 +1165,9 @@
     "%%sql\n",
     "\n",
     "SELECT *\n",
-    "    FROM persions\n",
-    "    WHERE age = 28 OR \n",
-    "          height > 170;"
+    "FROM   persons\n",
+    "WHERE  age = 28 \n",
+    "OR     height > 170;"
    ]
   },
   {
@@ -1216,7 +1202,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -1288,9 +1274,8 @@
     "%%sql\n",
     "\n",
     "SELECT *\n",
-    "    FROM persions\n",
-    "    WHERE age = 28 OR \n",
-    "          age = 26;"
+    "FROM   persons\n",
+    "WHERE  age = 28 OR age = 26;"
    ]
   },
   {
@@ -1316,7 +1301,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -1388,8 +1373,8 @@
     "%%sql\n",
     "\n",
     "SELECT *\n",
-    "    FROM persions\n",
-    "    WHERE age IN (26, 28);"
+    "FROM   persons\n",
+    "WHERE age IN (26, 28);"
    ]
   },
   {
@@ -1422,7 +1407,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -1504,9 +1489,9 @@
     "%%sql\n",
     "\n",
     "SELECT *\n",
-    "    FROM persions\n",
-    "    /* WHERE NOT age = 28; */\n",
-    "    WHERE age != 28;"
+    "FROM   persons\n",
+    "/* WHERE NOT age = 28; */\n",
+    "WHERE age != 28;"
    ]
   },
   {
@@ -1547,7 +1532,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -1659,8 +1644,8 @@
     "%%sql\n",
     "\n",
     "SELECT *\n",
-    "    FROM persions\n",
-    "    ORDER BY age;"
+    "FROM   persons\n",
+    "ORDER BY age;"
    ]
   },
   {
@@ -1700,7 +1685,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -1782,8 +1767,8 @@
     "%%sql\n",
     "\n",
     "SELECT *\n",
-    "    FROM persions\n",
-    "    WHERE city LIKE '%pei%';"
+    "FROM   persons\n",
+    "WHERE city LIKE '%pei%';"
    ]
   },
   {
@@ -1828,7 +1813,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>persion_id</th>\n",
+       "        <th>person_id</th>\n",
        "        <th>firstname</th>\n",
        "        <th>lastname</th>\n",
        "        <th>age</th>\n",
@@ -1949,13 +1934,13 @@
    "source": [
     "%%sql\n",
     "\n",
-    "ALTER TABLE persions\n",
-    "    ADD height_meters REAL;\n",
+    "ALTER TABLE persons\n",
+    "ADD height_meters REAL;\n",
     "\n",
-    "UPDATE persions\n",
-    "    SET height_meters = round(height / 100, 2);\n",
+    "UPDATE persons\n",
+    "SET height_meters = round(height / 100, 2);\n",
     "\n",
-    "SELECT * FROM persions;"
+    "SELECT * FROM persons;"
    ]
   },
   {
@@ -1997,7 +1982,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "DROP TABLE persions;"
+    "DROP TABLE persons;"
    ]
   },
   {
@@ -2023,12 +2008,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 120\r\n",
-      "drwxr-xr-x   5 kakalin  staff    160 May  7 15:29 \u001b[1m\u001b[36m.\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x  11 kakalin  staff    352 May  6 15:51 \u001b[1m\u001b[36m..\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x   3 kakalin  staff     96 May  5 15:53 \u001b[1m\u001b[36m.ipynb_checkpoints\u001b[m\u001b[m\r\n",
-      "-rw-r--r--   1 kakalin  staff    422 May  7 10:52 README.md\r\n",
-      "-rw-r--r--@  1 kakalin  staff  54433 May  7 15:29 sqlite-basics.ipynb\r\n"
+      "total 32\r\n",
+      "drwxr-xr-x 3 kaka kaka  4096  5月 14 10:16 .\r\n",
+      "drwxr-xr-x 7 kaka kaka  4096  5月 14 09:49 ..\r\n",
+      "drwxr-xr-x 2 kaka kaka  4096  5月 14 09:52 .ipynb_checkpoints\r\n",
+      "-rw-r--r-- 1 kaka kaka   422  5月 14 09:25 README.md\r\n",
+      "-rw-r--r-- 1 kaka kaka 15267  5月 14 10:16 sqlite-basics.ipynb\r\n"
      ]
     }
    ],
@@ -2054,7 +2039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -2087,7 +2072,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "316px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
