[Python] feats: Added ch2 - process_management: multiprocessing

--- a/Python/02_process_management/01_multithread.ipynb
+++ b/Python/02_process_management/01_multithread.ipynb
@@ -37,14 +37,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 建立子執行緒與執行\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 建立子執行緒\n",
+    "### 執行緒(Thread): `threading.Thread`\n",
+    "\n",
+    "1. 建立子執行緒與執行\n",
     "\n",
     "```python\n",
     "class threading.Thread(\n",
@@ -52,47 +47,27 @@
     "    args=(), kwargs={}, *, daemon=None)\n",
     "```\n",
     "\n",
-    "- Parms:\n",
-    "    - group: should be `None`; reserved for future extension when a ThreadGroup class is implemented.\n",
-    "    - target: the callable object to be invoked by the `run()` method.\n",
-    "    - name: the thread name.\n",
-    "    - args: the argument tuple for the target invocation. Defaults to `()`.\n",
-    "    - kwargs: a dictionary of keyword arguments for the target invocation. Defaults to `{}`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 執行子執行緒\n",
+    "- group: should be `None`; reserved for future extension when a ThreadGroup class is implemented.\n",
+    "- target: the callable object to be invoked by the `run()` method.\n",
+    "- name: the thread name.\n",
+    "- args: the argument tuple for the target invocation. Defaults to `()`.\n",
+    "- kwargs: a dictionary of keyword arguments for the target invocation. Defaults to `{}`.\n",
+    "\n",
+    "    \n",
+    "2. 執行子執行緒\n",
     "\n",
     "```python\n",
     "Thread.start()\n",
     "```\n",
     "\n",
-    "Start the thread's activate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "####  等待子執行緒結束\n",
+    "3. 等待子執行緒結束\n",
     "\n",
     "```python\n",
     "Thread.join(timeout=None)\n",
     "```\n",
     "\n",
-    "Wait until the thread terminates.\n",
-    "\n",
-    "When the timeout argument is present and not `None`, it should be a floating point number specifying a timeout for the operation in second"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 範例"
+    "    Wait until the thread terminates.\n",
+    "    When the timeout argument is present and not `None`, it should be a floating point number specifying a timeout for the operation in second"
    ]
   },
   {
@@ -157,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 建立多個子執行緒與參數"
+    "#### 建立多個子執行緒與參數"
    ]
   },
   {
@@ -217,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 物件導向\n",
+    "#### 物件導向 (Class)\n",
     "\n",
     "將`Thread`變成一個`Class`，需要覆寫`run()`\n",
     "\n",
@@ -1029,7 +1004,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "264px"
+    "width": "278px"
    },
    "toc_section_display": true,
    "toc_window_display": true
